--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -6,14 +6,15 @@
 
 .bar {
     background-color: #282828;
+	/* background-color: #1d2021; */
     color: #ebdbb2;
     padding: 5px
 }
 
 .module {
-    padding: 2.5px 10px;
+    padding: 2.5px 6px;
     font-size: 20px;
-	// background-color: #3c3836;
+	/* background-color: #282828; */
 }
 
 .accent {
