--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -6,7 +6,7 @@
 
 .bar {
     background-color: #282828;
-	/* background-color: #1d2021; */
+	// background-color: #1d2021;
     color: #ebdbb2;
     padding: 5px
 }
