--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -6,7 +6,6 @@
 
 .bar {
     background-color: #282828;
-	// background-color: #1d2021;
     color: #ebdbb2;
     padding: 5px
 }
@@ -14,11 +13,10 @@
 .module {
     padding: 2.5px 6px;
     font-size: 20px;
-	/* background-color: #282828; */
 }
 
 .accent {
-  color: #fe8019;
+  color: #d79921;
 }
 
 .workspace-button {
