--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -1,7 +1,7 @@
 * {
     all: unset;
-    font-family: "FiraCode";
-	font-weight: 600;
+    font-family: "mononoki";
+	font-weight: bold;
 }
 
 .bar {
