--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -5,8 +5,8 @@
 }
 
 .bar {
-    background-color: #282828;
-    color: #ebdbb2;
+    background-color: #121212;
+    color: #dedede;
     padding: 5px;
 }
 
@@ -16,10 +16,10 @@
 }
 
 .accent {
-    color: #d79921;
+    color: #ffba7b;
 }
 
 .active {
-    color: #d79921;
+    color: #ffba7b;
     text-decoration: underline;
 }
